# napari-aideveloper

./: CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
src/napari_aideveloper/: __init__.py  _widget.py  aid_bin.py  aid_dl.py  aid_img.py  aid_settings.json  aid_start.py  get_function_name.py  model_zoo.py  napari.yaml
src/napari_aideveloper/UI/: .arch  MyWidget.py  PopupFitting.ui  art.qrc  art_rc.py  napari_AID.py  napari_AID.ui
src/napari_aideveloper/UI/icon/: icon.qrc
src/napari_aideveloper/UI/styles/: 00_base.qss  02_custom.qss
src/napari_aideveloper/_tests/: test_widget.py
src/napari_aideveloper/art/styles/: 01_buttons.qss
