[metadata]
name = napari-aideveloper
version = 0.0.1
author = Chenqi Zhang
author_email = cqzhang@g.ecc.u-tokyo.ac.jp

license = BSD-3-Clause
description = napari_aideveloper is a napari-plugin deived from AIDeveloper that allows you to train, evaluate and apply deep neural nets for image classification within a graphical user-interface (GUI).
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
include_package_data = True
python_requires = >=3.8
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    magicgui
    qtpy
	dclab>=0.39.9
	h5py>=3.6.0
	Keras_Applications>=1.0.8
	keras>=2.8.0
	napari_plugin_engine>=0.2.0
	napari>=0.4.14
	onnx>=1.11.0
	opencv_contrib_python_headless>=4.5.5.62
	openpyxl>=3.0.9
	pandas>=1.4.1
	Pillow>=9.1.1
	psutil>=5.9.0
	pyqtgraph>=0.12.3
	pytest>=7.1.2
	scikit_learn>=1.1.1
	scipy>=1.8.0
	setuptools>=58.0.4
	six>=1.16.0
	tensorboard>=2.8.0
	tensorflow>=2.8.0
	tf2onnx>=1.9.3
	xlrd>=2.0.1
	
	
    


[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.packages.find]
where = src

[options.package_data]
* = *.yaml

[options.entry_points]
napari.manifest =
    napari-aideveloper = napari_aideveloper:napari.yaml
